--- a/src/index/style.less
+++ b/src/index/style.less
@@ -1,4 +1,9 @@
+html,body {
+    height: 100%;
+}
 div{
     color:#000;
     background: url('./images/test.jpg') no-repeat;
+    width: 60%;
+    height: 50%;
 }
