--- a/src/index/style.less
+++ b/src/index/style.less
@@ -4,6 +4,7 @@ html,body {
 div{
     color:#000;
     background: url('./images/test.jpg') no-repeat;
+    background-size: contain;
     width: 60%;
     height: 50%;
 }
