设置区分开发环境和生产环境

--- a/src/index/style.less
+++ b/src/index/style.less
@@ -2,7 +2,8 @@ html,body {
     height: 100%;
 }
 div{
-    color:#000;
+    color:#a4b3ff;
+    font-size: 24pt;
     background: url('./images/test.jpg') no-repeat;
     background-size: contain;
     width: 60%;
