--- a/src/index/style.less
+++ b/src/index/style.less
@@ -5,8 +5,14 @@ html,body {
 div{
     color:@color;
     font-size: 24pt;
-    background: url('../images/test.jpg') no-repeat;
+    background: url('images/test.jpg') no-repeat;
     background-size: contain;
     width: 60%;
     height: 50%;
+}
+p {
+    background: url('images/icon.png') no-repeat;
+    width: 40px;
+    height: 40px;
+    background-size: contain;
 }
